[package]
name = "fuzzbench_qemu"
version = "0.7.1"
authors = ["<ANONYMIZED>", "<ANONYMIZED>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
debug = true

[dependencies]
libafl = { path = "../../libafl/" }
libafl_qemu = { path = "../../libafl_qemu/", features = ["x86_64"] }
clap = { version = "3.0", features = ["default"] }
nix = "0.23"
